Revision history for Perl extension Module::Build.

0.34_01 - 

0.34 - Tue Jul  7 16:56:47 EDT 2009

 No changes from 0.33_06

0.33_06 - Sun Jul  5 10:11:40 EDT 2009

 Bug-fixes:
 - Bundled version code will use pure Perl on 5.10.0 to work around
   a corner case involving eval and locale [John Peacock]
 - Reversed VMS patch from 0.33_03 [Craig Berry]
 - PL_files in Build.PL that are in the bin/scripts directory should not be
   installed as if they are scripts (fixed for case-tolerant systems). 
   [David Golden, reported by Craig Berry]

0.33_05 - Sun Jun 28 22:06:49 EDT 2009

 Enhancements:
 - New 'auto_configure_requires' parameter (default 1) controls
   whether Module::Build should add itself to configure_requires
   in META.yml if not specified in Build.PL [David Golden]

 Bug-fixes:
 - The default MANIFEST.SKIP created by the "manifest" action
   was out of date.  It will now use the installed MANIFEST.SKIP
   and add some Module::Build and distribution specific items
   to it. [Michael Schwern]

 Other:
 - configure_requires do not necessarily need to be in requires
   or build_requires; warning to that effect has been removed
   [David Golden]

0.33_04 - Fri Jun 26 07:09:06 EDT 2009

 Bug-fixes:
 - Don't try utf8 YAML I/O on Perl 5.6 [David Golden]

 Other:
 - configure_requires added to prereq report (RT#47254) [Curtis Jewell]
 - updated Module::Build::Version to match forthcoming version.pm 0.77
   (RT#47256) [John Peacock]
 - skips xs.t and ppm.t when perl was not compiled with dynamic loading
   since Module::Buld does not support static linking (RT#46178) 
   [David Golden]
 - skip failing test in par.t if Archive::Zip is broken [David Golden]
 - Added YAML utf8 patch in 0.33_03 changes list
 - Added attribution for patches in 0.33_03 changes list

0.33_03 - Mon Jun 22 17:22:56 EDT 2009

 Bug-fixes:
 - Removes Module::Build from its own configure/build_requires 
   [David Golden]