@@ -2,6 +2,10 @@ Revision history for Perl extension Module::Build.
 
 0.34_01 - 
 
+ Enhancements:
+ - Added --debug flag to trace Build action execution (RT#47933)
+   [David Golden]
+
 0.34 - Tue Jul  7 16:56:47 EDT 2009
 
  No changes from 0.33_06
